--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://1iky.github.io/portfolio",
+  "homepage": "https://1iky.github.io/portfolio/",
   "type": "module",
   "scripts": {
     "dev": "vite",
