--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@lottiefiles/dotlottie-react": "^0.9.3",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
